force-app/main/default/objects/Target_Link__c/Target_Link__c.object-meta.xml
<CustomObject>
    <label>Target Link</label>
    <nameField>
        <label>Target Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>