force-app/main/default/objects/Target_Link__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Target Links</relationshipLabel>
    <relationshipName>Target_Links</relationshipName>
    <type>Lookup</type>
</CustomField>