force-app/main/default/objects/Target_Link__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Target Links</relationshipLabel>
    <relationshipName>Target_Links</relationshipName>
    <type>Lookup</type>
</CustomField>