force-app/main/default/objects/Target_Link__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Target Links</relationshipLabel>
    <relationshipName>Target_Links</relationshipName>
    <type>Lookup</type>
</CustomField>