force-app/main/default/objects/Target_Link__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Target Links</relationshipLabel>
    <relationshipName>Target_Links</relationshipName>
    <type>Lookup</type>
</CustomField>