force-app/main/default/objects/Target_Link__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Association Booking</fullName>
            </value>
            <value>
                <fullName>Company Booking</fullName>
            </value>
            <value>
                <fullName>Seren</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>