force-app/main/default/objects/Target_Link__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <referenceTo>Targets__c</referenceTo>
    <relationshipLabel>Target Links</relationshipLabel>
    <relationshipName>Target_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>