force-app/main/default/objects/Target_Link__c/fields/Target_Metric__c.field-meta.xml
<CustomField>
    <fullName>Target_Metric__c</fullName>
    <label>Target Metric</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Target_Metric</valueSetName>
    </valueSet>
</CustomField>