force-app/main/default/objects/Target_Link__c/validationRules/Match_Target_Metric.validationRule-meta.xml
<ValidationRule>
    <fullName>Match_Target_Metric</fullName>
    <active>true</active>
    <description>Ensures that the Target Metric on this record matches the Target Metric on the related Target record.</description>
    <errorConditionFormula>TEXT(Target_Metric__c) &lt;&gt; TEXT(Target__r.Target_Metric__c)</errorConditionFormula>
    <errorDisplayField>Target_Metric__c</errorDisplayField>
    <errorMessage>Target Metric must match the value on the related Target record.</errorMessage>
</ValidationRule>